# understanding_actix_cookies

./: README.md
backend/: Cargo.toml
backend/src/: main.rs
commons/: Cargo.toml
commons/src/: lib.rs
frontend/: Cargo.toml  index.html
frontend/src/: main.rs
oauth/: Cargo.toml
oauth/src/: main.rs
