[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
reqwasm = "0.5.0"
wasm-bindgen-futures = "0.4.40"
serde_qs = "0.12.0"
serde_derive = "1.0.197"
commons = { path = "../commons" }

[dependencies.web-sys]
version = "0.3.67"
features = [
  'Window',
]
